# AutonomousNavigationRRManchesterRobotics

./: README.md
puzzlebot_description/: CMakeLists.txt  package.xml
puzzlebot_description/launch/: puzzlebot_joints_test.launch
puzzlebot_description/meshes/bases/: MCR2_puzzlebot_lidar_base_v1.stl
puzzlebot_description/meshes/misc/: MCR2_dc_motor.stl  MCR2_dc_motor_left.stl  MCR2_dc_motor_right.stl  MCR2_puzzlebot_battery.stl
puzzlebot_description/meshes/sensors/: MCR2_puzzlebot_camera.stl
puzzlebot_description/meshes/wheels/: MCR2_puzzlebot_casterball.stl
puzzlebot_description/rviz/: puzzlebot_test.rviz
puzzlebot_description/scripts/: tf_map.py
puzzlebot_description/urdf/: puzzlebot_hacker_ed_v1_3.xacro  puzzlebot_jetson_ed_v1.xacro  puzzlebot_jetson_lidar_ed_v1.xacro
puzzlebot_description/urdf/hacker_ed/: materials_hacker_ed.xacro  parameters_hacker_ed_v1_3.xacro  puzzlebot_hacker_ed_v1_2.gazebo.xacro
puzzlebot_description/urdf/jetson_ed/: macros_jetson_ed.xacro  parameters_jetson_ed_v1.xacro  puzzlebot_jetson_ed_v1.gazebo.xacro
puzzlebot_description/urdf/jetson_lidar_ed/: parameters_jetson_lidar_ed_v1.xacro  puzzlebot_jetson_lidar_ed_v1.gazebo.xacro
puzzlebot_gazebo/: CMakeLists.txt  package.xml
puzzlebot_gazebo/launch/: gazebo_world.launch  puzzlebot_gazebo.launch  puzzlebot_spawner.launch
puzzlebot_gazebo/models/arena_a_frame/: model.config  model.sdf
puzzlebot_gazebo/models/aruco_box/: model.config  model.sdf
puzzlebot_gazebo/models/aruco_marker_0/: model.sdf
puzzlebot_gazebo/models/aruco_marker_1/: model.config  model.sdf
puzzlebot_gazebo/models/aruco_marker_2/: model.sdf
puzzlebot_gazebo/models/aruco_marker_3/: model.sdf
puzzlebot_gazebo/models/aruco_marker_4/: model.sdf
puzzlebot_gazebo/models/aruco_marker_5/: model.sdf
puzzlebot_gazebo/models/avoidance_world_1/: model.config  model.sdf
puzzlebot_gazebo/models/avoidance_world_2/: model.config  model.sdf
puzzlebot_gazebo/models/avoidance_world_3/: model.config  model.sdf
puzzlebot_gazebo/models/avoidance_world_4/: model.config  model.sdf
puzzlebot_gazebo/models/avoidance_world_5/: model.config  sim_map.sdf
puzzlebot_gazebo/models/blue_colored_box/: model.config  model.sdf
puzzlebot_gazebo/models/empty/: model.config  model.sdf
puzzlebot_gazebo/models/goal_marker_1/: model.config  model.sdf
puzzlebot_gazebo/models/goal_marker_2/: model.config  model.sdf
puzzlebot_gazebo/models/goal_marker_3/: model.config  model.sdf
puzzlebot_gazebo/models/goal_marker_4/: model.config  model.sdf
puzzlebot_gazebo/models/goal_marker_5/: model.config  model.sdf
puzzlebot_gazebo/models/office_floor/: model.config  model.sdf
puzzlebot_gazebo/models/office_model/: model.config  model.sdf
puzzlebot_gazebo/models/puzzlebot_base/: model.config  model.sdf
puzzlebot_gazebo/models/red_colored_box/: model.config  model.sdf
puzzlebot_gazebo/models/simple_light/: model.config  model.sdf
puzzlebot_gazebo/models/yellow_colored_box/: model.config  model.sdf
puzzlebot_gazebo/worlds/: ADJIC_map.world  empty.world  obstacle_avoidance_1.world  obstacle_avoidance_2.world  obstacle_avoidance_3.world  obstacle_avoidance_4.world  office.world  puzzlebot_arena.world  puzzlebot_arena_markers.world  puzzlebot_world.world
puzzlebot_gazebo/worlds/office_2/: model.config  (+1 more)
(+55 files in other folders)
